# TaskOrchestrator

./: Dockerfile  README.md  pyproject.toml
app/: config.py  config_db.py  main.py
app/helpers/: translation_result.py
app/models/: transcription.py
app/tasks/: asr_task.py  translation_task.py
