[tool.poetry]
name = "asr_service"
version = "0.1.0"
description = "A service for orchestration"
authors = ["Anonymous <anonymous@example.com>"]


[tool.poetry.dependencies]
python = "^3.10"
faststream = "^0.5.30"
aio-pika = "^9.5.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.17"
beanie = "^1.27.0"
motor  = "^3.6.0"
pydantic = "^2.10.1"
pydub = "^0.25.1"